{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 33,
  "lineage": "3f9aab9b-2be9-7dc5-f84e-86abb026d0db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d03b1ad793d7ac93",
            "arn": "arn:aws:ec2:us-east-2:443427500466:instance/i-0aa74e8e900e88784",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa74e8e900e88784",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansi-aws-centos",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd2be7322e3ce324",
            "private_dns": "ip-172-31-11-152.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.152",
            "public_dns": "ec2-18-191-168-51.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.168.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6b4e4b6f77cca1c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "helloworld"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0038c568fd40b5ae7",
            "tags": {
              "Name": "Helloworld"
            },
            "tags_all": {
              "Name": "Helloworld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ccc71e311811be87"
            ]
          },
          "dependencies": [
            "aws_security_group.helloworld"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:loadbalancer/app/helloworld/c78426ea57d980cd",
            "arn_suffix": "app/helloworld/c78426ea57d980cd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "helloworld-270535109.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:443427500466:loadbalancer/app/helloworld/c78426ea57d980cd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "helloworld",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ccc71e311811be87"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0038c568fd40b5ae7"
              },
              {
                "subnet_id": "subnet-0087bfd615ddbaee4"
              },
              {
                "subnet_id": "subnet-0fbe5e2b0bed61f46"
              }
            ],
            "subnets": [
              "subnet-0038c568fd40b5ae7",
              "subnet-0087bfd615ddbaee4",
              "subnet-0fbe5e2b0bed61f46"
            ],
            "vpc_id": "vpc-05171faed78691c10",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.helloworld"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:listener/app/helloworld/c78426ea57d980cd/f7cc9bcc6abf2804",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:443427500466:listener/app/helloworld/c78426ea57d980cd/f7cc9bcc6abf2804",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:loadbalancer/app/helloworld/c78426ea57d980cd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.helloworld"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:listener/app/helloworld/c78426ea57d980cd/0505113297882c91",
            "certificate_arn": "arn:aws:acm:us-east-2:443427500466:certificate/ab530fcb-5144-423d-a148-a9b585cf47fd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:targetgroup/TargetGroup/f966bdd4f9e7b887",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:443427500466:listener/app/helloworld/c78426ea57d980cd/0505113297882c91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:loadbalancer/app/helloworld/c78426ea57d980cd",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_acm_certificate.self",
            "aws_lb.lb",
            "aws_lb_target_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:targetgroup/TargetGroup/f966bdd4f9e7b887",
            "arn_suffix": "targetgroup/TargetGroup/f966bdd4f9e7b887",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:443427500466:targetgroup/TargetGroup/f966bdd4f9e7b887",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05171faed78691c10"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:443427500466:targetgroup/TargetGroup/f966bdd4f9e7b887-20230221172133351600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:443427500466:targetgroup/TargetGroup/f966bdd4f9e7b887",
            "target_id": "i-0aa74e8e900e88784"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "helloworld",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:443427500466:security-group/sg-0ccc71e311811be87",
            "description": "Allow access for ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccc71e311811be87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "76.217.11.46/32"
                ],
                "description": "allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "helloworld",
            "name_prefix": "",
            "owner_id": "443427500466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffic_from_home"
            },
            "tags_all": {
              "Name": "allow_traffic_from_home"
            },
            "timeouts": null,
            "vpc_id": "vpc-05171faed78691c10"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "helloworld",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:443427500466:vpc/vpc-05171faed78691c10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-03d16a4e3d5fbbf49",
            "default_route_table_id": "rtb-081d254f78b05f330",
            "default_security_group_id": "sg-05f4914ba8a421816",
            "dhcp_options_id": "dopt-042a8e5aa6f814f87",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05171faed78691c10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081d254f78b05f330",
            "owner_id": "443427500466"
          }
        }
      ]
    }
  ]
}